# RESTFul-OpenAPI-Frameworks-Benchmark

./: .gitignore  Cargo.toml  README.md  docker-compose-development.yml  docker-compose.yml  frameworks.yml  varnish.vcl
AspNetCore/: AspNetCore.sln
AspNetCore/AspNetCore/: Program.cs
AspNetCore/AspNetCore/Models/: SolrEntityResult.cs
AspNetCore/AspNetCore/Services/: IHttpApiService.cs
api-platform/: .env  .gitignore  Dockerfile-apache  Dockerfile-nginx-fpm  composer.json  nginx-fpm-start.sh
api-platform/config/: services.yaml
api-platform/public/: .htaccess
api-platform/src/DataProvider/: EntityDataProvider.php
benchmark_server/: Dockerfile  config.conf  main.py  solr.py  start_solr.sh  start_zk.sh
benchmark_server/solrconfig/: solrconfig.xml
fastapi/: Dockerfile  main.py
flask-restx/: docker-compose.yml  main.py
frameworks/AspNetCore/: Dockerfile
frameworks/api-platform/: .dockerignore  .env  Dockerfile-apache  Dockerfile-nginx-fpm  composer.json  nginx.conf
frameworks/fastapi/: Dockerfile
frameworks/flask-restx/: Dockerfile  requirements.txt
frameworks/jooby/: .gitignore  Dockerfile
frameworks/oatpp/: .gitignore
frameworks/rust-actix/: .gitignore  Cargo.toml  Dockerfile
jooby/: README.md  build.gradle  settings.gradle
jooby/conf/: logback.xml
main-application/: BenchmarkStructures.py  Dockerfile  bombardier.py  config.conf  main.py  requirements.txt  results.py
main-application/solrconfig/: managed-schema
nestjs-fastify/: Dockerfile  package-lock.json  package.json
nestjs-fastify/src/: app.controller.ts  main.ts
oatpp/: CMakeLists.txt  Dockerfile  conanfile.txt
oatpp/src/: SolrClient.hpp  main.cpp
oatpp/src/controllers/: HelloWorldController.hpp
oatpp/src/dto/: Entity.hpp  SubEntity.hpp
rust-actix/: docker-compose.yml
rust-actix/src/: main.rs
rust-rocket/: Cargo.toml  Dockerfile  docker-compose.yml
rust-rocket/src/: main.rs
src/: argparse.rs  backend.rs  framework_config.rs  main.rs  solr.rs
(+38 files in other folders)
