[package]
name = "RESTFul-OpenAPI-Frameworks-Benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docker-api = {version = "0.13"}
clap = {version = "4.*", features = ["derive"]}
tokio = { version = "1.*", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"
chrono = "0.4.23"
serde = { version = "1.*", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.*"}
futures-util = "0.3.27"
zip = { version = "0.6.4", default-features = false }
reqwest = { version = "0.11.14", features = ["serde_json", "json"]}
tempfile = "3.4.*"
walkdir = "2.3.*"
rand = "0.8.5"
hex = "0.4.3"